# devious

./: .gitignore  .goreleaser.yaml  Cargo.toml  LICENSE  README.md  dvs.yaml  go.mod  go.sum  justfile  logic_tree.txt  main.go  spec.txt
.github/workflows/: go-ci.yml  goreleaser.yml
cmd/: add.go  get.go  init.go  list.go  migrate.go  remove.go  root.go  status.go
internal/: umask.go  umask_windows.go  validate.go
internal/config/: main.go  main_test.go
internal/config/temp2902199178/: dvs.yaml
internal/config/temp414590490/: dvs.yaml
internal/config/temp934345976/: dvs.yaml
internal/file/: cache.go  cache_test.go  hash.go  hash_test.go
internal/git/: helper.go  ignore.go  ignore_test.go  main.go  main_test.go
internal/log/: json.go  main.go  pretty.go
internal/meta/: file.go  file_test.go  main.go  parse.go
internal/migrate/: config.go  main.go  meta.go  storage.go
internal/storage/: add.go  copy.go  copy_test.go  get.go  get_test.go  init.go  init_test.go  main.go  remove.go
internal/storage/temp3338312365/: dvs.yaml
internal/utils/: duration.go
scripts/: install_user.sh  setup_test_env.sh
src/: config.rs  dvs.yaml  init.rs  lib.rs  main.rs  repo.rs
src/cmd/: add_cmd.rs  get_cmd.rs  init_cmd.rs  mod.rs  status_cmd.rs
src/helpers/: hash.rs  ignore.rs  mod.rs  parse.rs
src/internal/: mod.rs
src/internal/config/: config.rs
src/internal/file/: hash.rs
src/test_directory/: .gitignore  test1.txt.dvsmeta  test2.txt.dvsmeta  test3.txt.dvsmeta
testing/: 10G.dvs  10G.dvsmeta  1G.dvs  266-536x354.jpg.dvs  571-536x354.jpg.dvs
(+15 files in other folders)
