[package]
name = "devious_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1.0.79"
clap = {version = "4.4.17", features = ["derive"]}
extendr-api = '*'
blake3 = { version = "1.5.1", features = ["rayon"] }
memmap2 = "0.7.1"
rayon = "1.7.0"
file-owner = "0.1.2"
chrono = "0.4.37"